--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
             <a href="index.html" style="--i: 0.05s;">Home</a>
           </li>
           <li>
-            <a href="#" style="--i: 0.1s;">Aircraft</a>
+            <a href="aircraft.html" style="--i: 0.1s;">Aircraft</a>
           </li>
           <li>
             <a href="#" style="--i: 0.15s;">Airports</a>
@@ -70,7 +70,7 @@
             <a href="search.html" style="--i: 0.3s;">Search</a>
           </li>
           <li>
-            <a href="#" style="--i: 0.35s;">About</a>
+            <a href="about.html" style="--i: 0.35s;">About</a>
           </li>
           <li>
             <a href="#" style="--i: 0.40s;">Contact</a>
@@ -83,4 +83,3 @@
     <script src="script.js"></script>
   </body>
 </html>
- 
