--- a/aircraft.html
+++ b/aircraft.html
@@ -24,9 +24,9 @@
               <div class="inner">
                 <h2 class="title-aircraft">Aircraft</h2>
                 <div class="aircraft-list" placeholder="Aircraft">
-                  <div class="aircraft-tile" role="button">
-                    <img src="https://picsum.photos/300/200?random=1" alt="" />
-                    <div class="aircraft-tile-caption">Airbus A380</div>
+                  <div class="aircraft-tile">
+                    <img class="thumbnail" src="/thumbnails/FlybywireA32NX.jpg" alt="" />
+                    <div class="aircraft-tile-caption">FlybywireA32NX</div>
                   </div>
                   <div class="aircraft-tile" role="button">
                     <img src="https://picsum.photos/300/200?random=2" alt="" />
