Update on the hover

--- a/aircraft.html
+++ b/aircraft.html
@@ -24,29 +24,29 @@
               <div class="inner">
                 <h2 class="title-aircraft">Aircraft</h2>
                 <div class="aircraft-list" placeholder="Aircraft">
-                  <div class="aircraft-tile">
+                  <div class="aircraft-tile" role="button">
                     <img class="thumbnail" src="/thumbnails/FlybywireA32NX.jpg" alt="" />
                     <div class="aircraft-tile-caption">FlybywireA32NX</div>
                   </div>
                   <div class="aircraft-tile" role="button">
-                    <img src="https://picsum.photos/300/200?random=2" alt="" />
-                    <div class="aircraft-tile-caption">Airbus A380</div>
+                    <img class="thumbnail" src="/thumbnails/B52.png" alt="" />
+                    <div class="aircraft-tile-caption">B52</div>
                   </div>
                   <div class="aircraft-tile" role="button">
-                    <img src="https://picsum.photos/300/200?random=3" alt="" />
-                    <div class="aircraft-tile-caption">Airbus A380</div>
+                    <img class="thumbnail" src="thumbnails/GotGravel-Monster-NXCub-MSFS-2.jpg" alt="" />
+                    <div class="aircraft-tile-caption">NXCub</div>
                   </div>
                   <div class="aircraft-tile" role="button">
-                    <img src="https://picsum.photos/300/200?random=4" alt="" />
-                    <div class="aircraft-tile-caption">Airbus A380</div>
+                    <img class="thumbnail" src="thumbnails/Microsoft+Flight+Simulator+Screenshot+2020.09.19+-+18.14.02.65.jpg" alt="" />
+                    <div class="aircraft-tile-caption">Salty Simulations 747</div>
                   </div>
                   <div class="aircraft-tile" role="button">
-                    <img src="https://picsum.photos/300/200?random=5" alt="" />
-                    <div class="aircraft-tile-caption">Airbus A380</div>
+                    <img class="thumbnail" src="thumbnails/5f6524222edee8d4f4c0cc4b_119464667_3295347520542039_2363221492695293897_o.jpg" alt="" />
+                    <div class="aircraft-tile-caption">Robin</div>
                   </div>
                   <div class="aircraft-tile" role="button">
-                    <img src="https://picsum.photos/300/200?random=6" alt="" />
-                    <div class="aircraft-tile-caption">Airbus A380</div>
+                    <img class="thumbnail" src="thumbnails/Annotation+2020-08-28+094957.png" alt="" />
+                    <div class="aircraft-tile-caption">F-15</div>
                   </div>
                   <div class="aircraft-tile" role="button">
                     <img src="https://picsum.photos/300/200?random=7" alt="" />
