--- a/aircraft.html
+++ b/aircraft.html
@@ -24,10 +24,10 @@
               <div class="inner">
                 <h2 class="title-aircraft">Aircraft</h2>
                 <div class="aircraft-list" placeholder="Aircraft">
-                  <div class="aircraft-tile" role="button">
+                  <a href="A320nx.html" class="aircraft-tile" >
                     <img class="thumbnail" src="/thumbnails/FlybywireA32NX.jpg" alt="" />
                     <div class="aircraft-tile-caption">FlybywireA32NX</div>
-                  </div>
+                  </a>
                   <div class="aircraft-tile" role="button">
                     <img class="thumbnail" src="/thumbnails/B52.png" alt="" />
                     <div class="aircraft-tile-caption">B52</div>
