--- a/A320nx.html
+++ b/A320nx.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MSFS Add-ons</title>
     <link rel="stylesheet" href="style.css" />
+    <script src="https://unpkg.com/boxicons@2.1.2/dist/boxicons.js"></script>
   </head>
   <body>
     <div class="container">
@@ -23,15 +24,10 @@
             <div class="overlay">
               <div class="inner">
                 <h2 class="title-aircraft">Fly By wire A320nx</h2>
-                <div class="aircraft" placeholder="Aircraft">
-                  <img class="thumbnail2" src="/thumbnails/FlybywireA32NX.jpg" alt="">
-                  <p>The A320nx by Fly By Wire Simulations offers a more comprenseve in depth version of the A320 comared to the defult MSFS2020 A320</p>
-                  <p class="info2">Range: 3,750NMI <br>Cruising Speed: 447Kt <br>Maximum Operating Speed: 470Kt <br> Maximum Altitude: 41, 000ft <br>MTOW: 158,000 Pounds <br>MLW:134,800</p>
-                  <div class="Downloads">
-                      Download links<br>
-                      <p id="links">Installer-><button class="Installer">Download</button><br></p>
-                      <p id="links">Zip-><button class="Installer">Download</button></p>
-                  </div>
+                <div class="aircraft-info">
+                  <img class="thumbnail2" src="/thumbnails/FlybywireA32NX.jpg">
+                  <p class="info1">The A320nx from Fly By Wire Simulations offers a more in depth/relistic version of the default A320Neo in MSFS2020</p>
+                  <p class="info2">Range: 3,750NMI <br> Cruising Speed: 447KN <br>Maximum Operating Speed: 470KN <br>Maximum Altitude: 41,000Ft <br>MTOW: 158,000</p>
                 </div>
               </div>
             </div>
