--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <div class="inner">
                 <h2 class="title">MSFS2020 add-ons</h2>
                 <p>
-                  Tons of add-ons to improve MFSF
+                  Tons of add-ons to improve MFSF2020
                 </p>
                 <button class="btn">Get started</button>
               </div>
