help page update

--- a/A320nx.html
+++ b/A320nx.html
@@ -54,7 +54,7 @@
                   <a class="dribbble" href="https://dribbble.com/shots/7299868-Download-Buttons" target="_blank"><img src="https://cdn.dribbble.com/assets/dribbble-ball-mark-2bd45f09c2fb58dbbfb44766d5d1d07c5a12972d602ef8b32204d28fa3dda554.svg" alt=""></a>
                 </div>
                 <div class="help">
-                  <a href="#" class="help-header">Need help installing?</a>
+                  <a href="help.html" class="help-header">Need help installing?</a>
                 </div>
               </div>
             </div>
