--- a/index.html
+++ b/index.html
@@ -69,5 +69,6 @@
 
     <script src="app.js"></script>
     <script src="btn_script.js"></script>
+    <script type="text/javascript"> var infolinks_pid = 3377847; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
   </body>
 </html>
